[project]
name = "hunt"
version = "0.1.0"
description = "Volleyball data collector using Groq Compound agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi[all]>=0.128.0",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langsmith>=0.6.4",
    "osmpythontools>=0.3.6",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
